# oneclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  ONECLAW-BLUEPRINT.md  ONECLAW-TIP-001.md  README.md
.cargo/: config.toml
crates/oneclaw-channels/: Cargo.toml  README.md
crates/oneclaw-channels/src/: cli.rs  lib.rs  mqtt.rs  tcp.rs  telegram.rs
crates/oneclaw-core/: Cargo.toml  README.md
crates/oneclaw-core/src/: config.rs  error.rs  lib.rs  metrics.rs  registry.rs  runtime.rs
crates/oneclaw-core/src/channel/: manager.rs  mod.rs  traits.rs
crates/oneclaw-core/src/event_bus/: async_bus.rs  bus.rs  mod.rs  pipeline.rs  traits.rs
crates/oneclaw-core/src/memory/: mod.rs  sqlite.rs  traits.rs  vector.rs
crates/oneclaw-core/src/orchestrator/: chain.rs  context.rs  fallback.rs  mod.rs  provider.rs  provider_manager.rs  router.rs
crates/oneclaw-core/src/provider/: anthropic.rs  chain_builder.rs  embedding.rs  embedding_ollama.rs  embedding_openai.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs  traits.rs
crates/oneclaw-core/src/security/: default.rs  mod.rs  pairing.rs  path_guard.rs  persistence.rs  rate_limit.rs  traits.rs
crates/oneclaw-core/src/tool/: mod.rs  registry.rs  traits.rs
crates/oneclaw-core/tests/: bench_suite.rs  boundary_edge_test.rs  chain_pipeline_test.rs  e2e_tool_channel_test.rs  error_recovery_test.rs  field_integration_test.rs  gate_sprint_19_20_test.rs  llm_pipeline_test.rs  memory_integration_test.rs  metrics_health_test.rs  pairing_flow_test.rs  security_audit_test.rs  security_auth_test.rs  shutdown_timeout_test.rs  sqlite_stress_test.rs  unicode_edge_test.rs
crates/oneclaw-providers/: Cargo.toml  README.md
crates/oneclaw-providers/src/: lib.rs  ollama.rs  openai_compat.rs
crates/oneclaw-tools/: Cargo.toml  README.md
crates/oneclaw-tools/src/: file_write.rs  lib.rs  notify.rs  system_info.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  OneclawDashboard.jsx  index.css
deploy/: install.sh  oneclaw.service  uninstall.sh
docs/: ARCHITECTURE.md  ONECLAW-HOME-DESIGN.md  ONECLAW-TIP-XRAY.md  dashboard.html
docs/ADR/: 002-config-default-convention.md
scripts/: bench.sh  cross-build.sh  demo.sh  gate-check.sh  release.sh
