[package]
name = "oneclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel implementations for OneClaw"

[dependencies]
oneclaw-core = { path = "../oneclaw-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
rumqttc = { workspace = true }
