[package]
name = "oneclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OneClaw Core — 5-layer trait-driven AI Agent Kernel"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
ring = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
